Add Ebook functionality