@@ -9,25 +9,25 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static io.github.kruzuzdyak.console_lib.console.ControllerUtil.requestUserInput;
 
 public class BookController {
 
     private static final String INTERFACE_MESSAGE =
-        """
-             1 - list all books
-             2 - find book by name
-             3 - add new book
-             4 - remove one book by name
-             5 - remove all books by name
-             0 - back
-            """;
+            """
+                     1 - list all books
+                     2 - find book by name
+                     3 - add new book
+                     4 - remove one book by name
+                     5 - remove all books by name
+                     0 - back
+                    """;
 
     private final ConsoleWriter writer = ConsoleWriter.INSTANCE;
     private final ConsoleReader reader = ConsoleReader.INSTANCE;
     private final BookService service = ServiceFactory.INSTANCE.getBookService();
+    private final BookValidator validator = new BookValidator();
     private final Map<String, ConsoleAction> actions;
 
     private boolean active = true;
@@ -53,25 +53,25 @@ public class BookController {
 
     private void listAllBooks() {
         List<String> books = service.findAll().stream()
-                                 .map(this::mapToString)
-                                 .collect(Collectors.toList());
+                .map(this::mapToString)
+                .toList();
         writer.print(books);
     }
 
     private void findByName() {
-        String name = requestUserInput("Input book name", "Invalid name", BookValidator::validateName);
+        String name = requestUserInput("Input book name", "Invalid name", validator::validateName);
         Optional<Book> searchResult = service.findByName(name);
 
         searchResult.ifPresentOrElse(
-            (book) -> writer.print(mapToString(book)),
-            () -> writer.print("No books found")
+                (book) -> writer.print(mapToString(book)),
+                () -> writer.print("No books found")
         );
     }
 
     private void createNewBook() {
-        String name = requestUserInput("Input book name", "Invalid book name", BookValidator::validateName);
-        String author = requestUserInput("Input book author name", "Invalid author name", BookValidator::validateAuthor);
-        String year = requestUserInput("Input publishing year", "Invalid year value", BookValidator::validatePublishingYear);
+        String name = requestUserInput("Input book name", "Invalid book name", validator::validateName);
+        String author = requestUserInput("Input book author name", "Invalid author name", validator::validateAuthor);
+        String year = requestUserInput("Input publishing year", "Invalid year value", validator::validatePublishingYear);
         Book book = new Book(name, author, year);
 
         if (service.create(book)) {
@@ -82,7 +82,7 @@ public class BookController {
     }
 
     private void deleteOneBookByName() {
-        String name = requestUserInput("Input book name to delete", "Invalid name", BookValidator::validateName);
+        String name = requestUserInput("Input book name to delete", "Invalid name", validator::validateName);
 
         if (service.deleteOne(name)) {
             writer.print("Successfully deleted");
@@ -92,7 +92,7 @@ public class BookController {
     }
 
     private void deleteAllBooksByName() {
-        String name = requestUserInput("Input book name to delete", "Invalid name", BookValidator::validateName);
+        String name = requestUserInput("Input book name to delete", "Invalid name", validator::validateName);
 
         if (service.delete(name)) {
             writer.print("Successfully deleted");
@@ -102,6 +102,7 @@ public class BookController {
     }
 
     private String mapToString(Book book) {
-        return String.format("Found: %s - %s - %s\n", book.getName(), book.getAuthor(), book.getPublishingYear());
+        return String.format("Found: %s - %s - %s\n",
+                book.getName(), book.getAuthor(), book.getPublishingYear());
     }
 }
